Add all needed parameters for incubator API